--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "apexcharts": "^3.49.1",
+    "chart.js": "^4.4.3",
     "preline": "^2.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
